# gpu-benches-baseliner

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
configs/: cuda-config.json  hip-config.json
gpu-benches/: CMakeLists.txt
gpu-benches/gpu-memcpy/: CMakeLists.txt  gpu-memcpy.hpp
gpu-benches/gpu-memcpy/cuda/: CMakeLists.txt  cudaMemcpy.cu  cudaMemcpy.hpp  gpu-memcpy.cu
gpu-benches/gpu-memcpy/hip/: CMakeLists.txt  gpu-memcpy.hip
gpu-benches/gpu-umstream/: gpu-umstream.hpp
gpu-benches/gpu-umstream/cuda/: CMakeLists.txt  gpu-umstream.cu
gpu-benches/gpu-umstream/hip/: CMakeLists.txt  gpu-umstream.hip
